# QTaskList

./: CMakeLists.txt  README.md
resources/ts/: QTaskList_fr_FR.ts
scripts/: update_ts.bat
src/: task_filter.cpp  task_filter.h  task_list.cpp  task_list.h  task_utils.cpp  task_utils.h
